--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,5 @@
 version: 0.2
 phases:
-  # install:
-  #   runtime-versions:
-  #     docker: 18
   pre_build:
     commands:
       # Install Snyk
@@ -12,28 +9,30 @@ phases:
       # Snyk auth
       # - ./snyk config set api="$SNYK_AUTH_TOKEN"
       # Build Docker image for testing
+      - sudo dockerd
+
       - echo Build client and backend docker images for testing...
-      - docker build -t aws_project/react-test -f ./client/Dockerfile.dev ./client
-      - docker build -t aws_project/nodejs-test -f ./backend/Dockerfile.dev ./backend
+      - docker build -t 216880/react-test -f ./client/Dockerfile.dev ./client
+      - docker build -t 216880/nodejs-test -f ./backend/Dockerfile.dev ./backend
   build:
     commands:
       - echo Build started on `date`
       # Run tests with built Docker images
       - echo Run react tests...
-      - docker run -e CI=true aws_project/react-test
+      - docker run -e CI=true 216880/react-test
       - echo Run nodejs tests...
-      - docker run -e CI=true aws_project/nodejs-test
+      - docker run -e CI=true 216880/nodejs-test
       # Scan Docker image with Snyk
       ## Client
       ## Run test for security vulernabilities
-      # - ./snyk test --severity-threshold=medium --docker aws_project/react-test:latest --file=./client/Dockerfile.dev
+      # - ./snyk test --severity-threshold=medium --docker 216880/react-test:latest --file=./client/Dockerfile.dev
       ## Setup continuous monitoring
-      # - ./snyk monitor --docker aws_project/react-test:latest --file=./client/Dockerfile.dev
+      # - ./snyk monitor --docker 216880/react-test:latest --file=./client/Dockerfile.dev
       ## Backend
       ## Run test for security vulernabilities
-      # - ./snyk test --severity-threshold=medium --docker aws_project/nodejs-test:latest --file=./backend/Dockerfile.dev
+      # - ./snyk test --severity-threshold=medium --docker 216880/nodejs-test:latest --file=./backend/Dockerfile.dev
       ## Setup continuous monitoring
-      # - ./snyk monitor --docker aws_project/nodejs-test:latest --file=./backend/Dockerfile.dev
+      # - ./snyk monitor --docker 216880/nodejs-test:latest --file=./backend/Dockerfile.dev
       # Build the Docker images
       - echo Building the production Docker image...
       - docker build -t psoir_app/psoir-app-client ./client
@@ -45,6 +44,6 @@ phases:
     commands:
       # Take these images and push them to Docker hub
       - echo Pushing the Docker images...
-      - docker push psoir_app/psoir-app-client
-      - docker push psoir_app/psoir-app-backend
-      - docker push psoir_app/psoir-app-nginx
+      - docker push 216880/psoir-app-client
+      - docker push 216880/psoir-app-backend
+      - docker push 216880/psoir-app-nginx
