--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   nginx:
-    image: psoir_app/psoir-app-nginx
+    image: 216880/psoir-app-nginx
     depends_on:
       - client
       - backend
@@ -12,7 +12,7 @@ services:
     ports:
       - '80:80'
   client:
-    image: psoir_app/psoir-app-client
+    image: 216880/psoir-app-client
     build:
       context: ./client
       dockerfile: Dockerfile
@@ -23,7 +23,7 @@ services:
     restart: on-failure
     container_name: client
   backend:
-    image: psoir_app/psoir-app-backend
+    image: 216880/psoir-app-backend
     build:
       context: ./backend
       dockerfile: Dockerfile
