--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,8 @@ phases:
       # Snyk auth
       # - ./snyk config set api="$SNYK_AUTH_TOKEN"
       # Build Docker image for testing
+      - sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
+      - sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
       - sudo dockerd
       - echo Build client and backend docker images for testing...
       - docker build -t 216880/react-test -f ./client/Dockerfile.dev ./client
