--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,9 @@ phases:
       # - ./snyk config set api="$SNYK_AUTH_TOKEN"
       # Build Docker image for testing
       #TODO check problems
-      - sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
-      - sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
-      - sudo dockerd
+      # - sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
+      # - sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+      # - sudo dockerd
       - echo Build client and backend docker images for testing...
       - docker build -t 216880/react-test -f ./client/Dockerfile.dev ./client
       - docker build -t 216880/nodejs-test -f ./backend/Dockerfile.dev ./backend
