--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
       # - sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
       # - sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
       # - sudo dockerd##
-      - service docker.io start 
-      - service docker.io on 
+      #- service docker.io start 
+      #- service docker.io on 
       - echo Build client and backend docker images for testing...
       - docker build -t 216880/react-test -f ./client/Dockerfile.dev ./client
       - docker build -t 216880/nodejs-test -f ./backend/Dockerfile.dev ./backend
