--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
       # - sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
       # - sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
       # - sudo dockerd##
-      #- service docker.io start 
+      #- service docker.io start #
       #- service docker.io on ###
       - echo Build client and backend docker images for testing...
       - service docker status
