--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
       #- service docker.io start #
       #- service docker.io on ###
       - echo Build client and backend docker images for testing...
-      - service /var/lib/docker status
+     # - service /var/lib/docker status
       - docker build -t 216880/react-test -f ./client/Dockerfile.dev ./client
       - docker build -t 216880/nodejs-test -f ./backend/Dockerfile.dev ./backend
   build:
