--- a/buildspec.yml
+++ b/buildspec.yml
@@ -39,9 +39,9 @@ phases:
       # - ./snyk monitor --docker 216880/nodejs-test:latest --file=./backend/Dockerfile.dev
       # Build the Docker images
       - echo Building the production Docker image...
-      - docker build -t psoir_app/psoir-app-client ./client
-      - docker build -t psoir_app/psoir-app-backend ./backend
-      - docker build -t psoir_app/psoir-app-nginx ./nginx
+      - docker build -t 216880/psoir-app-client ./client
+      - docker build -t 216880/psoir-app-backend ./backend
+      - docker build -t 216880/psoir-app-nginx ./nginx
       # Log in to the Docker CLI
       - echo "$DOCKER_PW" | docker login -u "$DOCKER_ID" --password-stdin
   post_build:
